add JWT and secure routes
