# pkg/user/routes.go
@@ -2,6 +2,7 @@ package user
 
 import (
 	"vet-clinic-api/config"
+	"vet-clinic-api/pkg/authentication"
 
 	"github.com/go-chi/chi/v5"
 )
@@ -13,11 +14,18 @@ func Routes(configuration *config.Config) chi.Router {
 	router := chi.NewRouter()
 
 	// Routes definition
-	router.Get("/{id}", userConfig.GetByIdHandler)
-	router.Get("/", userConfig.GetAllHandler)
-	router.Post("/", userConfig.PostHandler)
-	router.Put("/{id}", userConfig.UpdateHandler)
-	router.Delete("/{id}", userConfig.DeleteHandler)
+	router.Post("/login", userConfig.LoginHandler)
+
+	// Routes protected by authentication
+	router.Group(func(router chi.Router) {
+		router.Use(authentication.AuthMiddleware(userConfig.JWTSecret))
+
+		router.Get("/{id}", userConfig.GetByIdHandler)
+		router.Get("/", userConfig.GetAllHandler)
+		router.Post("/", userConfig.PostHandler)
+		router.Put("/{id}", userConfig.UpdateHandler)
+		router.Delete("/{id}", userConfig.DeleteHandler)
+	})
 
 	return router
 }
